# modern-icp

./: CHANGELOG.md  Cargo.toml  README.md  release.sh
.github/workflows/: cd.yml  ci.yml  github-release.yml
.zed/: settings.json
src/: common.rs  lib.rs  plane.rs  types.rs
src/align/: icp.rs  mod.rs  pca.rs
src/align/convergence/: is_almost_identity.rs  is_small_isometry.rs  is_small_squared_distance_error.rs  mod.rs  never.rs  same_squared_distance_error.rs
src/align/correspondence/: bidirectional_distance.rs  cylinder.rs  mod.rs  nearest_neighbor.rs
src/align/filter_points/: above_planes.rs  accept_all.rs  mod.rs
src/align/reject_outliers/: keep_all.rs  mod.rs  reject_3_sigmal_dist.rs  reject_n_sigma_dist.rs  reject_outliers_plane_dist.rs  reject_overlapping_ratios.rs
src/align/transform_estimation/: affine_transformation.rs  correntropy.rs  mod.rs  point_to_plane_lls.rs  point_to_plane_lls_weighted.rs  scale.rs  svd.rs  transform_modifier.rs  translation_point_to_plane.rs
src/integrations/: mod.rs  modelz.rs
src/point_cloud/: iterator.rs  masked.rs  mod.rs  point.rs  traits.rs
