[package]
name = "modern-icp"
version = "0.7.0"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["graphics", "algorithms", "mathematics"]
description = "A modern modular pure Rust implementation of the Iterative Closest Point algorithm."
exclude = ["examples/", "tests/"]
keywords = ["3D", "icp", "geometry", "mesh"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Synphonyte/modern-icp"

[dependencies]
cfg-if = "1"
kdtree = "0.8.0"
lazy_static = { version = "1.5.0", optional = true }
modelz = { version = "0.1.5", optional = true }
nalgebra = "0.34.1"
num-traits = "0.2.19"
rerun = { version = "0.25", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
statistical = "1"

[dev-dependencies]
rand = "0.9.2"

[features]
default = []
rerun = ["dep:rerun", "dep:lazy_static", "nalgebra/convert-glam029"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
modelz = ["dep:modelz"]
