[package]
name = "modern-icp"
version = "0.7.1"
edition = "2024"
description = "A modern modular pure Rust implementation of the Iterative Closest Point algorithm."
readme = "README.md"
repository = "https://github.com/Synphonyte/modern-icp"
license = "MIT"
keywords = ["3D", "geometry", "icp", "mesh"]
categories = ["algorithms", "graphics", "mathematics"]
exclude = ["examples/", "tests/"]

[dependencies]
cfg-if = "1"
kdtree = "0.7.0"
lazy_static = { version = "1.5.0", optional = true }
modelz = { version = "0.1.5", optional = true }
nalgebra = "0.34.1"
num-traits = "0.2.19"
rerun = { version = "0.25", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
statistical = "1"
tracing = "0.1"

[dev-dependencies]
rand = "0.9.2"

[features]
default = []
modelz = ["dep:modelz"]
rerun = ["dep:lazy_static", "dep:rerun", "nalgebra/convert-glam029"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
