[package]
categories = ["algorithms", "graphics", "mathematics"]
description = "A modern modular pure Rust implementation of the Iterative Closest Point algorithm."
edition = "2024"
exclude = ["examples/", "tests/"]
keywords = ["3D", "geometry", "icp", "mesh"]
license = "MIT"
name = "modern-icp"
readme = "README.md"
repository = "https://github.com/Synphonyte/modern-icp"
version = "0.12.0"

[dependencies]
cfg-if = "1"
kdtree = { version = "0.8" }
lazy_static = { version = "1.5.0", optional = true }
modelz = { version = "0.1.5", optional = true }
nalgebra = "0.35"
num-traits = "0.2.19"
rerun = { version = "0.33", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
statistical = "1"
tracing = "0.1"

[dev-dependencies]
rand = "0.10"

[features]
default = []
modelz = ["dep:modelz"]
rerun = ["dep:lazy_static", "dep:rerun", "nalgebra/convert-glam033"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
